         roms.c,widget.[ch]}: add wrappers around widget_do() for better type
         safety (Stuart).
20150319 ui/widget/widget.c: fix incorrect but benign referencing of widget_menu
         array (Stuart).
20150319 bitmap.h,display.c,rectangle.c: replace inline static with static
         inline (Stuart).
20150319 ui/win32/debugger.h: add missing IDC_DBG_REG_HALTED macro (Stuart).
20150319 fuse.c,menu.c,periph.c,peripherals/{disk/{disk.c,fdd.c},ide/{divide.c,
         zxatasp.c,zxcf.c},if1.c,printer.c,spectranet.c},rzx.c,sound/aosound.c,
         tape.c,ui/{fb/fbdisplay.c,gtk/options.pl,widget/{menu.c,,options.pl,
         pokefinder.c,query.c,select.c,widget_internals.h},win32/options.pl}:
         add missing const qualifiers (Stuart).
20150319 ui/win32/debugger.[c|h|rc]: relocate halted flag and set monospaced
         font (Sergio).
20150319 ui/uijoystick.c: fix memory leak and remove unneeded "out of memory"
         error handling (Sergio).
20150322 menu.c,tape.[c|h]: don't show an error when rewinding an empty tape
         (Sergio).
20150322 ui/gtk/{confirm.c,fileselector.c,gtkinternals.h,pokemem.c,stock.c}:
         replace deprecated GtkStock (Sergio).
20150322 ui/gtk/browse.c: clear out row mark in tape browser when selecting
         another block (Sergio).
20150328 debugger/breakpoint.c: store the matched breakpoint before removing it
         from the list and freeing it (fixes bug #317) (Tom Seddon).
20150402 man/fuse.1: adjust some references to peripherals options (Sergio).
20150402 compat/win32/distribution.mk,ui/win32/installer/fuse.nsi.in: prefer
         groff over man2html. Ensure tables are not broken. Distribute images
         referenced in the manual (Sergio).
20150405 man/fuse.1: adjust some cross-references (Sergio).
20150405 compat/win32/osname.c,sound/win32sound.c,ui/win32/{browse.c,debugger.c,
         pokefinder.c,ui/win32/pokemem.c,rollback.c,win32ui.c}: add missing
         const qualifiers and casts (Sergio).